@@ -26,17 +26,17 @@ rbart_vi(
 
 \S3method{plot}{rbart}(x, plquants = c(0.05, 0.95), cols = c('blue', 'black'), \dots)
 \S3method{fitted}{rbart}(object,
-                         value = c("ev", "ppd", "bart", "ranef"),
+                         type = c("ev", "ppd", "bart", "ranef"),
                          sample = c("train", "test"),
                          combineChains = TRUE,
                          \dots)
 \S3method{extract}{rbart}(object,
-                          value = c("ev", "ppd", "bart", "ranef"),
+                          type = c("ev", "ppd", "bart", "ranef"),
                           sample = c("train", "test"),
                           combineChains = TRUE,
                           \dots)
 \S3method{predict}{rbart}(object, newdata, group.by, offset,
-                          value = c("ev", "ppd", "bart", "ranef"),
+                          type = c("ev", "ppd", "bart", "ranef"),
                           combineChains = TRUE,
                           \dots)
 }
@@ -65,11 +65,13 @@ rbart_vi(
     Same as in \code{\link{bart2}}.}
   \item{object}{A fitted \code{rbart} model.}
   \item{newdata}{Same as \code{test}, but named to match \code{\link{predict}} generic.}
-  \item{value}{One of \code{"ev"}, \code{"ppd"}, \code{"bart"}, \code{"ranef"} for
-        the posterior of the expected value, posterior predictive distribution, non-parametric/BART component,
-        or random effect respectively. The expected value is the sum of the BART component and the
-        random effects, while the posterior predictive distribution is a response sampled
-        with that mean.}
+  \item{type}{One of \code{"ev"}, \code{"ppd"}, \code{"bart"}, \code{"ranef"} for
+        the posterior of the expected value, posterior predictive distribution, non-parametric/BART
+        component, or random effect respectively. The expected value is the sum of the BART component
+        and the random effects, while the posterior predictive distribution is a response sampled
+        with that mean. To synergize with \code{\link{predict.glm}}, \code{"response"} can
+        be used as a synonym for \code{"value"} and \code{"link"} can be used as a synonym for
+        \code{"bart"}.}
   \item{sample}{One of \code{"train"} or \code{"test"}, referring to the training or tests samples
         respectively.}
   \item{x, plquants, cols}{Same as in \code{\link{plot.bart}}.}
